--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -236,7 +236,7 @@
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
                     consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
                     elit consequipsum.</p>
-                <a href="">REad More</a>
+                <a href="#">REad More</a>
             </li>
             <li>
                 <i class="fa-recycle"></i>
@@ -245,7 +245,7 @@
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
                     consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
                     elit consequipsum.</p>
-                <a href="">REad More</a>
+                <a href="#">REad More</a>
             </li>
             <li>
                 <i class="fa-puzzle-piece"></i>
@@ -254,7 +254,7 @@
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
                     consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
                     elit consequipsum.</p>
-                <a href="">REad More</a>
+                <a href="#">REad More</a>
             </li>
             <li>
                 <i class="fa-legal"></i>
@@ -263,7 +263,7 @@
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
                     consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
                     elit consequipsum.</p>
-                <a href="">REad More</a>
+                <a href="#">REad More</a>
             </li>
         </ul>
         <section class="pricing">
@@ -384,231 +384,216 @@
         </section>
     </main>
     <footer>
-        <div class="footerhead content clear">
-            <div class="footer-menu">
-                <h3>Main menu</h3>
-                <ul>
-                    <li>
-                        <a class="angle-right" href="#">Home page</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">About Us</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">Our Blog</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">Our Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">FAQ</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-menu">
-                <h3>Our friends</h3>
-                <ul>
-                    <li>
-                        <a class="angle-right" href="#">adipiscing elit integer</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">magma euismod</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">purus molestle</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">adipiscing elit integer</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">purus molestle</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-menu">
-                <h3>Useful links</h3>
-                <ul>
-                    <li>
-                        <a class="angle-right" href="#">Privacy policy</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">Terms of use</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">purus molestle</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">adipiscing elit integer</a>
-                    </li>
-                    <li>
-                        <a class="angle-right" href="#">magma euismod</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-menu">
-                <h3>Tags cloud</h3>
-                <ul>
-                    <li class="tag">
-                        <a href="#">Design</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">User interface</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">Performance</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">Development</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">WordPress</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">SEO</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">Joomia</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">ASP.NET</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">SharePoint</a>
-                    </li>
-                    <li class="tag">
-                        <a href="#">Bootstrap</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="middleborder"></div>
-            <div class="footer-menu">
-                <h3>Contact us</h3>
-                <ul class="contacts">
-                    <li>
-                        <i class="fa-home"></i>
-                        <span>123, Second Street name Address.</span>
-                    </li>
-                    <li>
-                        <i class="fa-globe"></i>
-                        <a href="#">info@it-rays.com</a>
-                    </li>
-                    <li>
-                        <i class="fa-phone"></i>
-                        <span>+1 (000) 000-0000</span>
-                    </li>
-                    <li>
-                        <i class="fa-marker"></i>
-                        <a href="#">View our map</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-menu clear">
-                <div class="logo"></div>
-                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to
-                    our newsletter.</p>
-                <form class="action">
-                    <input type="email" value name="EMAIL" placeholder="Enter your Email">
-                    <input type="submit" value="Send">
-                </form>
-            </div>
-            <div class="footer-menu">
-                <h3>Latest tweet</h3>
-            </div>
-            <div class="footer-menu clear">
-                <h3>Flickr stream</h3>
-                <ul class="dogs">
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="footerbottom">
-            <div class="row content">
-                <div class="copyrights">
-                    © Copyrights
-                    <b>EXCEPTION</b> 2014. All rights reserved.
-                    <span>
-                        <a href="">Privacy policy</a> |
-                        <a href="">Terms of use</a>
-                    </span>
-                </div>
-                <div class="socialmedia">
+        <div class="footerhead content">
+            <ul class="top clear">
+                <li class="footer-menu">
+                    <h3>Main menu</h3>
+                    <ul class="angle">
+                        <li>
+                            <a href="#">Home page</a>
+                        </li>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">Our Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Our Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#">FAQ</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-menu">
+                    <h3>Our friends</h3>
+                    <ul class="angle">
+                        <li>
+                            <a href="#">adipiscing elit integer</a>
+                        </li>
+                        <li>
+                            <a href="#">magma euismod</a>
+                        </li>
+                        <li>
+                            <a href="#">purus molestle</a>
+                        </li>
+                        <li>
+                            <a href="#">adipiscing elit integer</a>
+                        </li>
+                        <li>
+                            <a href="#">purus molestle</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-menu">
+                    <h3>Useful links</h3>
+                    <ul class="angle">
+                        <li>
+                            <a href="#">Privacy policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms of use</a>
+                        </li>
+                        <li>
+                            <a href="#">purus molestle</a>
+                        </li>
+                        <li>
+                            <a href="#">adipiscing elit integer</a>
+                        </li>
+                        <li>
+                            <a href="#">magma euismod</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-menu">
+                    <h3>Tags cloud</h3>
+                    <ul class="tag">
+                        <li>
+                            <a href="#">Design</a>
+                        </li>
+                        <li>
+                            <a href="#">User interface</a>
+                        </li>
+                        <li>
+                            <a href="#">Performance</a>
+                        </li>
+                        <li>
+                            <a href="#">Development</a>
+                        </li>
+                        <li>
+                            <a href="#">WordPress</a>
+                        </li>
+                        <li>
+                            <a href="#">SEO</a>
+                        </li>
+                        <li>
+                            <a href="#">Joomia</a>
+                        </li>
+                        <li>
+                            <a href="#">ASP.NET</a>
+                        </li>
+                        <li>
+                            <a href="#">SharePoint</a>
+                        </li>
+                        <li>
+                            <a href="#">Bootstrap</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="bottom clear">
+                <li class="footer-menu">
+                    <h3>Contact us</h3>
+                    <ul class="contacts">
+                        <li>
+                            <i class="fa-home"></i>
+                            <span>123, Second Street name Address.</span>
+                        </li>
+                        <li>
+                            <i class="fa-globe"></i>
+                            <a href="#">info@it-rays.com</a>
+                        </li>
+                        <li>
+                            <i class="fa-phone"></i>
+                            <span>+1 (000) 000-0000</span>
+                        </li>
+                        <li>
+                            <i class="fa-map-marker"></i>
+                            <a href="#">View our map</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-menu about">
+                    <div class="logo"></div>
+                    <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe
+                        to
+                        our newsletter.</p>
+                    <form class="clear">
+                        <input type="email" placeholder="Enter your Email" />
+                        <input type="submit" value="Send" />
+                    </form>
+                </li>
+                <li class="footer-menu">
+                    <h3>Latest tweet</h3>
+                </li>
+                <li class="footer-menu flickr">
+                    <h3>Flickr stream</h3>
                     <ul class="clear">
                         <li>
                             <a href="#">
-                                <span class="fa-dribble"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="fa-facebook"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="fa-linkedin"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="fa-skype"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="fa-tumbler"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="fa-twitter"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="fa-YouTube"></span>
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="images/3435384001_9ed9864bb4_s.jpg" alt="" />
                             </a>
                         </li>
                     </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="footerbottom">
+            <div class="content clear">
+                <div class="copyrights">
+                    <span>© Copyrights<b>EXCEPTION</b> 2014. All rights reserved.</span>
+                    <ul>
+                        <li>
+                            <a href="#">Privacy policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms of use</a>
+                        </li>
+                    </ul>
                 </div>
+                <ul class="socialmedia clear">
+                    <li>
+                        <a class="fa-dribbble" href="#"></a>
+                    </li>
+                    <li>
+                        <a class="fa-dribbble" href="#"></a>
+                    </li>
+                    <li>
+                        <a class="fa-dribbble" href="#"></a>
+                    </li>
+                    <li>
+                        <a class="fa-dribbble" href="#"></a>
+                    </li>
+                    <li>
+                        <a class="fa-dribbble" href="#"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
