--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -566,8 +566,8 @@
         </div>
         <div class="footerbottom">
             <div class="content clear">
-                <div class="copyrights">
-                    <span>© Copyrights<b>EXCEPTION</b> 2014. All rights reserved.</span>
+                <div class="copyrights clear">
+                    <span>© Copyrights <b>EXCEPTION</b> 2014. All rights reserved.</span>
                     <ul>
                         <li>
                             <a href="#">Privacy policy</a>
