--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -382,6 +382,46 @@
                 </div>
             </div>
         </section>
+        <section class="tasks clear">
+            <h2 class="title center">Tasks</h2>
+            <div class="task-box">
+                <span>Task 1</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 2</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 3</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 4</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 5</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 6</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 7</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 8</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 9</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 10</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 11</span>
+                <p></p>
+            </div>
+            <div class="task-box"><span>Task 12</span>
+                <p></p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footerhead content">
