--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -384,42 +384,97 @@
         </section>
         <section class="tasks clear">
             <h2 class="title center">Tasks</h2>
-            <div class="task-box">
+            <div onmouseover="alerto()" class="task-box">
                 <span>Task 1</span>
-                <p></p>
+                <p>Используя конструкцию if..else, напишите код, который будет спрашивать: 'Какой сейчас год?'. Если
+                    посетитель вводит '2015', то выводить 'Вы правы!', если что-то другое — выводить 'С луны свалися?
+                    2015!'.</p>
             </div>
-            <div class="task-box"><span>Task 2</span>
-                <p></p>
+            <div onmouseover="getNum()" class="task-box"><span>Task 2</span>
+                <p>Используя конструкцию if..else, напишите код, который будет спрашивать: 'Введите любое целое
+                    число?'Затем выведите alert: 1, если значение больше нуля, -1, если значение меньше нуля, 0, если
+                    значение равно нулю.</p>
             </div>
             <div class="task-box"><span>Task 3</span>
-                <p></p>
+                <p>Напишите код, который будет запрашивать логин пользователя (prompt). Если посетитель вводит 'admin',
+                    то спрашивать пароль, если нажал отмена (escape) — выводить 'Canceled', если вводит что-то другое —
+                    'Access denied'. Пароль проверять так. Если введён пароль 'passw0rd', то выводить 'Welcome home!',
+                    иначе — 'Wrong password', при отмене — 'Canceled'.</p>
             </div>
             <div class="task-box"><span>Task 4</span>
-                <p></p>
+                <p>Перепишите if с использованием оператора '?':
+                    var a = 1, b = 2;
+
+                    if (a + b >= 3) {
+                    result = 'Yep!';
+                    } else {
+                    result = 'Noup!';
+                    }
+                    З</p>
+                    <br>
+                    a + b >= 3 ? alert('Yep!') : alert('Noup!');
             </div>
             <div class="task-box"><span>Task 5</span>
-                <p></p>
+                <p>Перепишите if..else с использованием нескольких операторов '?':
+                    var name = 'admin', text;
+
+                    if (name == 'admin') {
+                    text = 'Hi';
+                    } else if (name == 'manager') {
+                    text = 'Hello';
+                    } else if (name == '') {
+                    text = 'No login';
+                    } else {
+                    text = '';
+                    }</p>
             </div>
             <div class="task-box"><span>Task 6</span>
-                <p></p>
+                <p>Напишите цикл, который предлагает prompt ввести число, большее 100. Если посетитель ввел другое
+                    число — попросить ввести еще раз, и так далее.
+                    Цикл должен спрашивать число пока либо посетитель не введет число, большее 100, либо не нажмет
+                    кнопку Cancel (ESC).
+                    Предполагается, что посетитель вводит только числа, предусматривать обработку нечисловых строк в
+                    этой задаче необязательно.</p>
             </div>
             <div class="task-box"><span>Task 7</span>
-                <p></p>
+                <p>Натуральное число, большее 1, называется простым, если оно ни на что не делится, кроме себя и 1.
+                    Другими словами, n > 1 – простое, если при делении на любое число от 2 до n-1 есть остаток.
+                    Создайте код, который выводит все простые числа из интервала от 2 до 10. Результат должен
+                    быть: 2,3,5,7.
+                    P.S. Код также должен легко модифицироваться для любых других интервалов.</p>
             </div>
             <div class="task-box"><span>Task 8</span>
-                <p></p>
+                <p>Напишите программу, которая выводит через console.log все числа от 1 до 100, с двумя исключениями.
+                    Для чисел, нацело делящихся на 3, она должна выводить ‘Fizz’, а для чисел, делящихся на 5 (но не
+                    на 3) – 'Buzz'.</p>
             </div>
             <div class="task-box"><span>Task 9</span>
-                <p></p>
+                <p>Исправьте предыдущую задачу FizzBuzz так, чтобы она выводила «FizzBuzz» для всех чисел, которые
+                    делятся и на3, и на 5.</p>
             </div>
             <div class="task-box"><span>Task 10</span>
-                <p></p>
+                <p>Напишите программу, создающую строку, содержащую решётку 8х8, в которой линии разделяются символами
+                    новой строки. На каждой позиции либо пробел, либо \#. В результате должна получиться шахматная
+                    доска.
+                    # # # #
+                    # # # #
+                    # # # #
+                    # # # #
+                    # # # #
+                    # # # #
+                    # # # #
+                    # # # #
+                    Когда справитесь, сделайте размер доски переменным, чтобы можно было создавать доски любого размера</p>
             </div>
             <div class="task-box"><span>Task 11</span>
-                <p></p>
+                <p>Напишите функцию pow(x,n), которая возвращает x в степени n. Иначе говоря, умножает x на себя n раз
+                    и возвращает результат.
+                    pow(3, 2) = 3 * 3 = 9
+                    pow(1, 100) = 1 * 1 * ...* 1 = 1</p>
             </div>
             <div class="task-box"><span>Task 12</span>
-                <p></p>
+                <p>Напишите функцию, которая принимает на вход строку и возвращает ее неизменной если ее длина не
+                    превышает 20 символов. Если длинна больше 20, то обрезает строку и добавляет в конец строки '...'</p>
             </div>
         </section>
     </main>
